@@ -17,4 +17,8 @@
     <button stock="gtk-no" response="GTK_RESPONSE_NO"/>
     <button stock="gtk-yes" response="GTK_RESPONSE_YES"/>
   </error>  
+   <error id="insufficient-permissions" type="error">
+   	<_title>Insufficient Permissions</_title>
+	<_secondary>The selected folder does not have enough permissions to create the file</_secondary>
+   </error>
 </error-list>
